--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Opdracht 1 - Sneeuwlandschap</name>
+	<name>Opdracht 1 - Sneeuwlandschap - isDead</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -18,7 +18,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1330343741779</id>
+			<id>0</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
